Adicionando e melhorando configurações dos testes